--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "automated-zoom",
-  "productName": "automated-zoom",
+  "name": "online-class-automation",
+  "productName": "online-class-automation",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "For automating your online class",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
@@ -55,6 +55,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "11.1.1"
+    "electron": "^11.1.1",
+    "electron-packager": "^15.2.0"
   }
 }
