--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "better-opn": "^2.1.1",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^6.0.1",
     "sound-play": "^1.0.5"
   },
   "devDependencies": {
